--- a/recipes/chicken-noodle.html
+++ b/recipes/chicken-noodle.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Chicken Noodle Soup</h1>
-        <img src="https://www.allrecipes.com/thmb/pTGS0SZsSQK85sV_RQE_K6ZfoN4=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/26460-quick-and-easy-chicken-noodle-soup-allrecipes-1x1-1-b88125437574471db3e114c40bc6928e.jpg">
+        <img src="https://www.allrecipes.com/thmb/pTGS0SZsSQK85sV_RQE_K6ZfoN4=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/26460-quick-and-easy-chicken-noodle-soup-allrecipes-1x1-1-b88125437574471db3e114c40bc6928e.jpg" height="200" width="200">
         <p>
            This homemade chicken noodle soup has a hint of southern spice that is sure to delight! Whip it up in under an hour
            with fresh vegetables, your favorite stock, and a bbq rottiserie chicken.
