Add ingredients to chicken-noodle.html

--- a/recipes/chicken-noodle.html
+++ b/recipes/chicken-noodle.html
@@ -9,7 +9,19 @@
         <img src="https://www.allrecipes.com/thmb/pTGS0SZsSQK85sV_RQE_K6ZfoN4=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/26460-quick-and-easy-chicken-noodle-soup-allrecipes-1x1-1-b88125437574471db3e114c40bc6928e.jpg" height="200" width="200">
         <p>
            This homemade chicken noodle soup has a hint of southern spice that is sure to delight! Whip it up in under an hour
-           with fresh vegetables, your favorite stock, and a bbq rottiserie chicken.
+           with fresh vegetables, your favorite stock, and a bbq rotisserie chicken.
         </p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1 rotisserie chicken, preferably bbq flavor but any will do</li>
+            <li>4 carrots, diced</li>
+            <li>1 large sweet onion, sliced</li>
+            <li>6 stalks of celery, diced</li>
+            <li>1 bay leaf</li>
+            <li>1/2 head of garlic</li>
+            <li>Tony Chacheree's or other cajun seasoning to taste</li>
+            <li>Salt and pepper to taste</li>
+        </ul>
+
     </body>
 </html>
