Add preparation instructions for chicken-noodle.html

--- a/recipes/chicken-noodle.html
+++ b/recipes/chicken-noodle.html
@@ -20,8 +20,23 @@
             <li>1 bay leaf</li>
             <li>1/2 head of garlic</li>
             <li>Tony Chacheree's or other cajun seasoning to taste</li>
+            <li>A few squirts of your favorite hot sauce</li>
             <li>Salt and pepper to taste</li>
+            <li>1 table spoon butter</li>
         </ul>
+
+        <h2>Preparation</h2>
+        <ol>
+            <li>Use your hands to tear the rotisserie chicken into smaller pieces. Use as much of it as possible. Set aside.</li>
+            <li>Cut your veggies, keeping the onion and garlic separate.</li>
+            <li>Heat butter in large soup pan until melted, then saute onions and garlic, adding a small amount of salt and pepper.</li>
+            <li>Throw celery and carrots into the saute mixture for a minute or so.</li>
+            <li>Pour stock into pan, add bay leaf, pepper, and Tony Chacheree's to taste. Bring to a simmer.</li>
+            <li>Let simmer for about 10 minutes, then add chicken.</li>
+            <li>Continue simmering to taste and texture preference.</li>
+            <li>Add hot sauce to taste.</li>
+            <li>After serving, add shredded pepperjack cheese as a topping.</li>
+        </ol>
 
     </body>
 </html>
