--- a/recipes/chicken-noodle.html
+++ b/recipes/chicken-noodle.html
@@ -14,6 +14,7 @@
         <h2>Ingredients</h2>
         <ul>
             <li>1 rotisserie chicken, preferably bbq flavor but any will do</li>
+            <li>2-3 quarts chicken stock</li>
             <li>4 carrots, diced</li>
             <li>1 large sweet onion, sliced</li>
             <li>6 stalks of celery, diced</li>
@@ -23,6 +24,7 @@
             <li>A few squirts of your favorite hot sauce</li>
             <li>Salt and pepper to taste</li>
             <li>1 table spoon butter</li>
+            <li>Shredded pepperjack cheese</li>
         </ul>
 
         <h2>Preparation</h2>
